--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gitmodules/TuviBytesShamirSecretSharingLib"]
+[submodule "TuviBytesShamirSecretSharingLib"]
 	path = gitmodules/TuviBytesShamirSecretSharingLib
-	url = https://github.com/Gymbotan/TuviBytesShamirSecretSharingLib
+	url = ../TuviBytesShamirSecretSharingLib.git
