--- a/MnemonicSharingLibTests/MnemonicSharingLibTests.csproj
+++ b/MnemonicSharingLibTests/MnemonicSharingLibTests.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <AnalysisLevel>6.0-all</AnalysisLevel>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
